VSE scene strip OpenGl render crash #47985

Closed
opened 2016-03-29 04:07:12 +02:00 by Sacha Goedegebure · 10 comments

System Information
Win64
GeForce GTX 760

Blender Version
Broken: official 2.77 release
Broken: 2.77 build e2e72a2

Short description of error
With a Scene strip in VSE, and 'OpenGL Preview' disabled, pressing 'OpenGL render active viewport' only renders the cached frames. Blender gets stuck when it gets to a non-cached frame. Both in Cycles and Blender render.

Exact steps for others to reproduce the error
Attached file has Scene strip in VSE and 'OpenGL Preview' disabled.

Just press 'OpenGL render active viewport'

Rendering should stop.

VSE_render_opengl_crash.blend

**System Information** Win64 GeForce GTX 760 **Blender Version** Broken: official 2.77 release Broken: 2.77 build e2e72a2 **Short description of error** With a Scene strip in VSE, and 'OpenGL Preview' disabled, pressing 'OpenGL render active viewport' only renders the cached frames. Blender gets stuck when it gets to a non-cached frame. Both in Cycles and Blender render. **Exact steps for others to reproduce the error** Attached file has Scene strip in VSE and 'OpenGL Preview' disabled. Just press 'OpenGL render active viewport' Rendering should stop. [VSE_render_opengl_crash.blend](https://archive.blender.org/developer/F298712/VSE_render_opengl_crash.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SachaGoedegebure

Added subscriber: @SachaGoedegebure

Closed as duplicate of #47848

Closed as duplicate of #47848

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This is fixed (try a daily build), will be included in 2.77a

This is fixed (try a daily build), will be included in 2.77a

I used yesterday's build (e2e72a2).

Even in today's build (blender-2.77.0-git.b1f918b-AMD64) the issue is still there.

I used yesterday's build (e2e72a2). Even in today's build (blender-2.77.0-git.b1f918b-AMD64) the issue is still there.

Changed status from 'Duplicate' to: 'Open'

Changed status from 'Duplicate' to: 'Open'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by ec28fe2e6b

This issue was referenced by ec28fe2e6b4e2b6455d64f0467d26f585adc715a

Just tried the latest build from Friday, April 1 (git.f185eff-AMD64)

Though it does render every frame this time, the Scene strip will not be included in the render, unless the frames are cached.

In attached file, just render opengl in VSE. Scene strip is excluded from render.

VSE_render_opengl_sceneExluded.blend

Just tried the latest build from Friday, April 1 (git.f185eff-AMD64) Though it does render every frame this time, the Scene strip will not be included in the render, unless the frames are cached. In attached file, just render opengl in VSE. Scene strip is excluded from render. [VSE_render_opengl_sceneExluded.blend](https://archive.blender.org/developer/F300654/VSE_render_opengl_sceneExluded.blend)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47985
No description provided.